eks-cluster-ec2/k8s-files/network-policy/production/pods.yaml
# Deploy app-pod and service
# apiVersion: v1
# kind: Pod
# metadata:
#   name: app-pod
#   namespace: production
#   labels:
#     pod: app-pod
# spec:
#   containers:
#   - name: myapp
#     image: nginx
#     resources:
#       limits:
#         cpu: 200m
#         memory: 500Mi
#       requests:
#         cpu: 100m
#         memory: 200Mi
#     ports:
#     - containerPort: 80
#       name:  http

# --- 
# apiVersion: v1
# kind: Service
# metadata:
#   name: app-pod
#   namespace: production
# spec:
#   selector:
#     app: app-pod
#   type: ClusterIP
#   ports:
#   - name: http
#     protocol: TCP
#     port: 8080
#     targetPort: 80

# --- 
# Deploy db-pod and service

# Deploy app-pod
apiVersion: v1
kind: Pod
metadata:
  name: db-pod
  namespace: production
  labels:
    pod: db-pod
spec:
  containers:
  - name: myapp
    image: nginx
    resources:
      limits:
        cpu: 200m
        memory: 500Mi
      requests:
        cpu: 100m
        memory: 200Mi
    ports:
    - containerPort: 80
      name:  http

---
apiVersion: v1
kind: Service
metadata:
  name: db-pod
  namespace: production
spec:
  selector:
    app: db-pod
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 80
