eks-cluster-ec2/k8s-files/network-policy/production/default-network-policy.yaml
---
# default deny in the production namespace to block all
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-network-policy
  namespace: production
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
